<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llo">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/green"
        android:gravity="end|center_vertical|bottom"
        android:maxLength="12"
        android:text=""
        android:hint="0"
        android:textColorHint="@color/white"
        android:textColor="@color/textViewColor"
        android:textSize="48sp" />
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/seven"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/eight"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/nine"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/divide"
            android:onClick="onOperator"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/four"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/five"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/six"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/multiply"
            android:layout_margin="10dp"
            android:onClick="onOperator"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/one"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/two"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/three"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/subtract"
            android:layout_margin="10dp"
            android:onClick="onOperator"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/dot"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="OnDecimalPoint"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/zero"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="OnDigit"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:onClick="OnClear"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/clear"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/add"
            android:layout_marginRight="10dp"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:onClick="onEqual"
            android:background="@color/grey"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnCross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cross"
            android:onClick="OnCross"
            android:background="@color/grey"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>